2003-12-08  Werner Koch  <wk@gnupg.org>

	* Makefile.am (ksba_TEXINFOS): Removed fdl.texi.

2003-12-01  Werner Koch  <wk@gnupg.org>

	* ksba.texi: Changed license to GPL.
	* fdl.texi: Removed

2002-11-13  Werner Koch  <wk@gnupg.org>

	* ksba.texi: Sanitized the wording of fixmes and added pointers to
	example code.

2002-06-19  Werner Koch  <wk@gnupg.org>

	* ksba.texi: Fixed the direntry.  Noted by Thomas Koester.

2002-04-15  Werner Koch  <wk@gnupg.org>

	* ksba.texi: Add new functions.

 Copyright 2002, 2003 g10 Code GmbH

 This file is free software; as a special exception the author gives
 unlimited permission to copy and/or distribute it, with or without
 modifications, as long as this notice is preserved.

 This file is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.