@@ -1,3 +1,9 @@
+2004-01-28  Werner Koch  <wk@gnupg.org>
+
+	* dn.c: Updated the table and changed a few names only used for
+	String->DER.  Added a source specifier as a replacement for the
+	allowed_by_rfc2253 field..
+
 2004-01-19  Werner Koch  <wk@gnupg.org>
 
 	* cms.c (build_signed_data_attributes): Argh. We need to sort the
